# computer_room_management_system

./: CMakeLists.txt  ComputerRoom.h  Identity.h  Manager.cpp  Manager.h  Mysql_Connect.cpp  Mysql_Connect.h  README.md  Student.h  Teacher.cpp  Teacher.h  main.cpp  order.txt  orderFile.cpp  orderFile.h  student.cpp  student.txt  teacher.txt
